--- a/app/global.css
+++ b/app/global.css
@@ -1,1 +1,3 @@
-@import "bootswatch/dist/flatly/bootstrap.min.css"
+@import "bootswatch/dist/flatly/bootstrap.min.css";
+/* Seating Component Styles */
+
